static/css/index.css
body {
  font-family: "Noto Sans", sans-serif;
}

.footer .icon-link {
  margin: 0 10px;
  font-size: 25px;
  color: #000;
}

.link-block a {
  margin-top: 5px;
  margin-bottom: 5px;
}

.dnerf {
  font-variant: small-caps;
}

.teaser .hero-body {
  padding-top: 0;
  padding-bottom: 3rem;
}

.teaser {
  font-family: "Google Sans", sans-serif;
}

.publication-title {
}

.publication-banner {
  max-height: parent;
}

.publication-banner video {
  position: relative;
  left: auto;
  top: auto;
  transform: none;
  object-fit: fit;
}

.publication-header .hero-body {
  padding-bottom: 1rem;
}

.hero-body {
  padding-top: 1rem !important;
  padding-bottom: 1rem !important;
}


.publication-title {
  font-family: "Google Sans", sans-serif;
}

.publication-authors {
  font-family: "Google Sans", sans-serif;
}

.publication-venue {
  color: #555;
  width: fit-content;
  font-weight: bold;
}

.publication-awards {
  color: #ff3860;
  width: fit-content;
  font-weight: bolder;
}

.publication-authors {
  color: #b83a4b !important;
}

.conference-authors a {
  color: #b83a4b !important;
}

/* i want red color for non hyperlink next line */
.publication-authors a {
  /* color: #889bf3 !important; */
  /* color: hsl(121, 100%, 36%) !important; */
  color: hsl(204, 86%, 53%) !important;
}

.publication-authors a:hover {
  text-decoration: underline;
}

.author-block {
  display: inline-block;
}

.publication-banner img {
}

.publication-authors {
  /*color: #4286f4;*/
}

.publication-video {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;

  overflow: hidden;
  border-radius: 10px !important;
}

.publication-video iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.publication-body img {
}

.results-carousel {
  overflow: hidden;
}

/* Hide previous and next navigation buttons
.slider-navigation-previous,
.slider-navigation-next {
  display: none;
}

/* Hide pagination (if present) */
/* .slider-pagination {
  display: none;
}  */

.results-carousel .item {
  margin: 5px;
  overflow: hidden;
  border: 1px solid #bbb; 
  border-radius: 10px;
  padding: 0;
  font-size: 0; 
  /* width: 550px; */
}
/* .slider-item{
  width:500px !important;
} */
/* make a center carousel cover 50% of width */
/* .carousel .carousel-item.is-middle {
  width: 10% !important;
  border: 2px solid red !important;
} */
.results-carousel video {
  margin: 0;
}

.interpolation-panel {
  background: #f5f5f5;
  border-radius: 10px;
}

.interpolation-panel .interpolation-image {
  width: 100%;
  border-radius: 5px;
}

.interpolation-video-column {
}

.interpolation-panel .slider {
  margin: 0 !important;
}

.interpolation-panel .slider {
  margin: 0 !important;
}

#interpolation-image-wrapper {
  width: 100%;
}
#interpolation-image-wrapper img {
  border-radius: 5px;
}

.video-container {
  position: relative;
  overflow: hidden;
}

.video-container video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.slider-container .slider-item .video-container {
  /* height: 60vh; */
  height: 320px !important;
}

.slider-item .video-container {
  /* height: 60vh; */
  height: 320px !important;
}

/* .slider-item{ */
  /* height: 60vh; */
  /* width: 550px !important; */
/* } */

.caption {
  text-align: center;
  font-size: 25px;
  color: #333; /* Change to your desired text color */
  margin-top: 0px; /* Adjust the margin as needed to create space for captions */
}

.content {
  margin-bottom: 20px; /* Add space between the content and the strategies */
}

.strategy {
  display: flex; /* Create a flex container for the strategies */
  justify-content: space-between; /* Align the strategies next to each other */
  flex-wrap: wrap; /* Allow wrapping of strategy sections to the next row if needed */
}

.strategy-section {
  flex-basis: calc(
    50% - 10px
  ); /* Each strategy section takes half of the available width with a small gap in between */
  margin-bottom: 10px; /* Add space between strategy sections */
}

.extra {
  display: none;
}

.paper-thumbnail {
  margin: 0 auto;
  width: 40%;
  /* max-width: 400px; */
  display: inline-block;
  vertical-align: top;
  padding: 2% 10% 4% 0;
}

.paper-info {
  width: 45%;
  /* height: 100%; */
  display: inline-block;
  vertical-align: top;
  text-align: left;
}

.layered-paper-big {
  /* modified from: http://css-tricks.com/snippets/css/layered-paper/ */
  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.35),
    /* The top layer shadow */ 5px 5px 0 0px #fff,
    /* The second layer */ 5px 5px 1px 1px rgba(0, 0, 0, 0.35),
    /* The second layer shadow */ 10px 10px 0 0px #fff,
    /* The third layer */ 10px 10px 1px 1px rgba(0, 0, 0, 0.35),
    /* The third layer shadow */ 15px 15px 0 0px #fff,
    /* The fourth layer */ 15px 15px 1px 1px rgba(0, 0, 0, 0.35),
    /* The fourth layer shadow */ 20px 20px 0 0px #fff,
    /* The fifth layer */ 20px 20px 1px 1px rgba(0, 0, 0, 0.35),
    /* The fifth layer shadow */ 25px 25px 0 0px #fff,
    /* The fifth layer */ 25px 25px 1px 1px rgba(0, 0, 0, 0.35); /* The fifth layer shadow */
  margin-left: 10px;
  margin-right: 45px;
}

